# strafe-jump-trainer

./: Cargo.toml  README.md  package.py
src/: ai.rs  collision.rs  env.rs  gfx.rs  gl_context.rs  input.rs  lib.rs  player.rs  ui.rs
static/: index.html
utils/: Cargo.toml
utils/src/: serve.rs
