[package]
name = "strafe_tutorial"
publish = false
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = {version="0.17", features=["swizzle"]}
console_error_panic_hook = "0.1"
js-sys = "0.3"
rand = {version="0.7", features=["wasm-bindgen"]}
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    'CssStyleDeclaration',
    'Document',
    'DomTokenList',
    'Element',
    'Event',
    'EventTarget',
    'HtmlButtonElement',
    'HtmlCanvasElement',
    'HtmlDivElement',
    'HtmlElement',
    'HtmlInputElement',
    'KeyboardEvent',
    'MouseEvent',
    'Node',
    'Performance',
    'WebGlActiveInfo',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'Window',
]